# ethylene-glycol-phantom-thermometry

./: README.md  pyproject.toml
.github/workflows/: push-tests.yml
data/1.5T/: Meas_01_final_35_1_gre_brain_therm_TE179_20250917121120_AdjGre_1.json  Meas_01_final_35_1_gre_brain_therm_TE179_20250917121120_AdjGre_1_report.json  Meas_01_final_36_1_gre_brain_therm_TE268_20250917121120_AdjGre_1.json  Meas_01_final_69_1_gre_brain_therm_TE179_20250917121120_AdjGre_1.json  Meas_01_final_70_1_gre_brain_therm_TE268_20250917121120_AdjGre_1.json  Spirit_run3_34_1_gre_brain_therm_TE179_20250917124207_AdjGre_1.json  Spirit_run3_35_1_gre_brain_therm_TE268_20250917124207_AdjGre_1.json  Spirit_run4_35_1_gre_brain_therm_TE179_20250917130531_AdjGre_1.json  Spirit_run4_36_1_gre_brain_therm_TE268_20250917130531_AdjGre_1.json  Spirit_run5_35_1_gre_brain_therm_TE179_20250917133018_AdjGre_1.json  Spirit_run5_36_1_gre_brain_therm_TE268_20250917133018_AdjGre_1.json  Spirit_run6_35_1_gre_brain_therm_TE179_20250917143457_AdjGre_1.json  Spirit_run6_36_1_gre_brain_therm_TE268_20250917143457_AdjGre_1.json  Spirit_run7_35_1_gre_brain_therm_TE179_20250917152932_AdjGre_1.json  Spirit_run7_36_1_gre_brain_therm_TE268_20250917152932_AdjGre_1.json  Spirit_run7_69_1_gre_brain_therm_TE179_20250917152932_AdjGre_1.json  Spirit_run7_70_1_gre_brain_therm_TE268_20250917152932_AdjGre_1.json  Spirit_run9_35_1_gre_brain_therm_TE179_20250917155957_AdjGre_1.json  Spirit_run9_36_1_gre_brain_therm_TE268_20250917155957_AdjGre_1.json  image_information.xlsx  run-01_thermometry_report.json  run-02_series-070_te_s.txt  run-02_thermometry_report.json  run-03_thermometry_report.json  run-04_thermometry_report.json  run-05_thermometry_report.json  run-06_thermometry_report.json  run-07_thermometry_report.json  run-08_thermometry_report.json  run-09_thermometry_report.json  thermometry_analysis_Method.REGIONWISE_BOOTSTRAP.xlsx  ~$image_information.xlsx
data/3T/: Therm_run_1_6_gre_brain_therm_TE179_20251017080723_AdjGre.json  Therm_run_1_7_gre_brain_therm_TE268_20251017080723_AdjGre.json  Therm_run_2_2_gre_brain_therm_TE179_20251017092140_AdjGre.json  Therm_run_2_3_gre_brain_therm_TE268_20251017092140_AdjGre.json  Therm_run_3_2_gre_brain_therm_TE179_20251017094559_AdjGre.json  Therm_run_3_3_gre_brain_therm_TE268_20251017094559_AdjGre.json  Therm_run_4_2_gre_brain_therm_TE179_20251017101157_AdjGre.json  Therm_run_4_3_gre_brain_therm_TE268_20251017101157_AdjGre.json  Therm_run_5_2_gre_brain_therm_TE179_20251017103613_AdjGre.json  Therm_run_5_3_gre_brain_therm_TE268_20251017103613_AdjGre.json  Therm_run_6_2_gre_brain_therm_TE179_20251017110859_AdjGre.json  Therm_run_6_3_gre_brain_therm_TE268_20251017110859_AdjGre.json  Therm_run_7_2_gre_brain_therm_TE179_20251017113914_AdjGre.json  Therm_run_7_3_gre_brain_therm_TE268_20251017113914_AdjGre.json  Therm_run_8_2_gre_brain_therm_TE179_20251017120907_AdjGre.json  Therm_run_8_3_gre_brain_therm_TE268_20251017120907_AdjGre.json  image_information.xlsx  run-01_thermometry_report.json  run-02_thermometry_report.json  run-03_thermometry_report.json  run-04_thermometry_report.json  run-05_thermometry_report.json  run-06_thermometry_report.json  run-07_series-002_te_s.txt  run-07_thermometry_report.json  run-08_thermometry_report.json  thermometry_analysis_Method.REGIONWISE_BOOTSTRAP.xlsx
src/ethylene_glycol_phantom_thermometry/: analysis.py  cli.py  util.py
tests/: __init__.py
